fix menu style on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -58,7 +58,7 @@ h3 {
     min-height: 78px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: minmax(230px, 1fr) 1fr;
+    grid-template-columns: minmax(220px, 1fr) 1fr;
 
     .logo {
       display: grid;
@@ -102,8 +102,8 @@ h3 {
       text-align: right;
       ul {
         list-style: none;
-        padding-top: 15px;
-        margin-right: 10px;
+        padding: 15px 2px 0 0;
+        margin-right: 0 10px 0 0;
         li {
           display: inline-block;
           margin: 0;
@@ -111,7 +111,7 @@ h3 {
 
           a {
             color: #fff;
-            padding: 10px;
+            padding: 10px 5px;
             text-decoration: none;
           }
 
